--- a/DisCatSharp.Lavalink/DisCatSharp.Lavalink.csproj
+++ b/DisCatSharp.Lavalink/DisCatSharp.Lavalink.csproj
@@ -24,6 +24,7 @@ Play your favorite music in discord!
 Documentation: https://docs.discatsharp.tech/articles/modules/audio/lavalink/setup.html
 	</Description>
 	<PackageTags>DisCatSharp,Discord API Wrapper,Discord,Bots,Discord Bots,AITSYS,Net6,Voice,Lavalink,Audio Player,Music,YouTube,Spotify,SoundCloud</PackageTags>
+	<TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
