--- a/.gitignore
+++ b/.gitignore
@@ -400,7 +400,7 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
-config.json
+config.cs
 TestModules.cs
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp
