--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3"
 
 services:
   dotnetdiscordbot:
-    build: .
+    build: 
+      context: .
+      dockerfile: .
     container_name: discordbot
     restart: unless-stopped
     networks:
