--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,6 @@ jobs:
         script: | 
           cd DotnetDiscordBot
           git pull
+          docker compose stop
           docker compose build
           docker compose --env-file ./.env up -d
