--- a/DiscordBot/DiscordBot.csproj
+++ b/DiscordBot/DiscordBot.csproj
@@ -10,7 +10,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DisCatSharp.CommandsNext" Version="10.3.3-nightly-021" />
     <PackageReference Include="DisCatSharp.Interactivity" Version="10.3.3-nightly-021" />
     <PackageReference Include="DisCatSharp.VoiceNext" Version="10.3.3-nightly-021" />
     <PackageReference Include="Discord.Net" Version="3.9.0" />
@@ -23,15 +22,21 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="DisCatSharp">
+    <Reference Condition="'$(Configuration)' == 'Release'" Include="DisCatSharp">
       <HintPath>DisCatSharp.dll</HintPath>
     </Reference>
-    <Reference Include="DisCatSharp.Common">
+    <Reference Condition="'$(Configuration)' == 'Release'" Include="DisCatSharp.Common">
       <HintPath>DisCatSharp.Common.dll</HintPath>
     </Reference>
-    <Reference Include="DisCatSharp.Lavalink">
+    <Reference Condition="'$(Configuration)' == 'Release'" Include="DisCatSharp.Lavalink">
       <HintPath>DisCatSharp.Lavalink.dll</HintPath>
     </Reference>
+	<Reference Condition="'$(Configuration)' == 'Release'" Include="DisCatSharp.CommandsNext">
+	  <HintPath>DisCatSharp.CommandsNext.dll</HintPath>
+	</Reference>
+    <ProjectReference Condition="'$(Configuration)' == 'Debug'" Include="..\DisCatSharp.CommandsNext\DisCatSharp.CommandsNext.csproj" />
+    <ProjectReference Condition="'$(Configuration)' == 'Debug'" Include="..\DisCatSharp.Lavalink\DisCatSharp.Lavalink.csproj" />
+    <ProjectReference Condition="'$(Configuration)' == 'Debug'" Include="..\DisCatSharp\DisCatSharp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
