--- a/DiscordBot/DiscordBot.csproj
+++ b/DiscordBot/DiscordBot.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="MySqlConnector" Version="2.3.0-beta.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="OpenAI" Version="1.6.0" />
+    <PackageReference Include="OpenAI" Version="1.7.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,6 +36,7 @@
 	</Reference>
     <ProjectReference Condition="'$(Configuration)' == 'Debug'" Include="..\DisCatSharp.CommandsNext\DisCatSharp.CommandsNext.csproj" />
     <ProjectReference Condition="'$(Configuration)' == 'Debug'" Include="..\DisCatSharp.Lavalink\DisCatSharp.Lavalink.csproj" />
+    <ProjectReference Condition="'$(Configuration)' == 'Debug'" Include="..\DisCatSharp.Common\DisCatSharp.Common.csproj" />
     <ProjectReference Condition="'$(Configuration)' == 'Debug'" Include="..\DisCatSharp\DisCatSharp.csproj" />
   </ItemGroup>
 
