--- a/DisCatSharp.Lavalink/DisCatSharp.Lavalink.csproj
+++ b/DisCatSharp.Lavalink/DisCatSharp.Lavalink.csproj
@@ -41,4 +41,7 @@ Documentation: https://docs.discatsharp.tech/articles/modules/audio/lavalink/set
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
   </ItemGroup>
 
+  <Target Condition="'$(Configuration)' == 'Release' And '$(OS)' == 'Windows_NT'" Name="PostBuild" BeforeTargets="PostBuildEvent">
+    <Exec Command="copy $(OutDir)$(AssemblyName).dll $(ProjectDir)..\DiscordBot\" />
+  </Target>
 </Project>
