--- a/DiscordBot/DiscordBot.csproj
+++ b/DiscordBot/DiscordBot.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DisCatSharp.ApplicationCommands" Version="10.3.3-nightly-021" />
     <PackageReference Include="DisCatSharp.Interactivity" Version="10.3.3-nightly-021" />
     <PackageReference Include="DisCatSharp.VoiceNext" Version="10.3.3-nightly-021" />
     <PackageReference Include="Discord.Net" Version="3.9.0" />
