--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -2,6 +2,9 @@ server: # REST and WS server
   port: 2333
   address: 0.0.0.0
 lavalink:
+  plugins:
+    - dependency: "com.github.lavalink-devs.lavaplayer-youtube-source:plugin:1.0.6"
+      repository: "https://jitpack.io"
   server:
     password: "bonsoirDocker"
     sources:
