--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -5,10 +5,13 @@ lavalink:
   plugins:
     - dependency: "com.github.lavalink-devs.lavaplayer-youtube-source:plugin:1.0.6"
       repository: "https://jitpack.io"
+      youtube:
+        enabled: true
+        clients: [ "MUSIC", "ANDROID", "WEB" ]
   server:
     password: "bonsoirDocker"
     sources:
-      youtube: true
+      youtube: false
       bandcamp: true
       soundcloud: true
       twitch: true
