--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -3,11 +3,20 @@ server: # REST and WS server
   address: 0.0.0.0
 lavalink:
   plugins:
-    - dependency: "com.github.lavalink-devs.lavaplayer-youtube-source:plugin:1.0.6"
-      repository: "https://jitpack.io"
+    - dependency: "dev.lavalink.youtube:youtube-plugin:1.5.1"
+      snapshot: false
       youtube:
         enabled: true
-        clients: [ "MUSIC", "ANDROID", "WEB" ]
+        allowSearch: true # Whether "ytsearch:" and "ytmsearch:" can be used.
+        allowDirectVideoIds: true # Whether just video IDs can match. If false, only complete URLs will be loaded.
+        allowDirectPlaylistIds: true # Whether just playlist IDs can match. If false, only complete URLs will be loaded.
+        # The clients to use for track loading. See below for a list of valid clients.
+        # Clients are queried in the order they are given (so the first client is queried first and so on...)
+        clients:
+          - MUSIC
+          - ANDROID_TESTSUITE
+          - WEB
+          - TVHTML5EMBEDDED
   server:
     password: "bonsoirDocker"
     sources:
