--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -12,6 +12,8 @@ lavalink:
         allowDirectPlaylistIds: true # Whether just playlist IDs can match. If false, only complete URLs will be loaded.
         # The clients to use for track loading. See below for a list of valid clients.
         # Clients are queried in the order they are given (so the first client is queried first and so on...)
+        oauth:
+          enabled: true
         clients:
           - MUSIC
           - ANDROID_TESTSUITE
