fix: application.yml

--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -5,25 +5,10 @@ lavalink:
   plugins:
     - dependency: "dev.lavalink.youtube:youtube-plugin:1.8.2"
       snapshot: false
-      youtube:
-        enabled: true
-        allowSearch: true # Whether "ytsearch:" and "ytmsearch:" can be used.
-        allowDirectVideoIds: true # Whether just video IDs can match. If false, only complete URLs will be loaded.
-        allowDirectPlaylistIds: true # Whether just playlist IDs can match. If false, only complete URLs will be loaded.
-        # The clients to use for track loading. See below for a list of valid clients.
-        # Clients are queried in the order they are given (so the first client is queried first and so on...)
-        pot:
-          token: "MnT2zMyuOhUrDfb0KqQn8LardKqGyMg1az6B94qicCbZn0cXmuOcKpzp-9hONy9723EHa1iPhFgnc0cIdsop0vLLYjgrze8FC1ge8Up7_juprXPcNf9gEEdNvaGGckbjLsrVPlKCU30tV5CCedyx4OpY9diIFA=="
-          visitorData: "CgtoeE5wYlR3ZUlHMCib9tK3BjIKCgJLUhIEGgAgEg%3D%3D"
-        clients:
-          - MUSIC
-          - ANDROID_TESTSUITE
-          - WEB
-          - TVHTML5EMBEDDED
   server:
     password: "bonsoirDocker"
     sources:
-      youtube: false
+      youtube: true
       bandcamp: true
       soundcloud: true
       twitch: true
