--- a/lavalink/application.yml
+++ b/lavalink/application.yml
@@ -77,19 +77,4 @@ logging:
 
   level:
     root: INFO
-    # Set this to DEBUG to enable more detailed logging from Lavalink
-    lavalink: DEBUG
-    # Set this to TRACE to see all WebSocket messages sent
-    lavalink.server.io.SocketContext: TRACE
-    # Log all track exceptions (COMMON, SUSPICIOUS & FAULT)
-    com.sedmelluq.discord.lavaplayer.tools.ExceptionTools: DEBUG
-    # Log YouTube Plugin stuff (only needed if you have issues with YouTube)
-    dev.lavalink.youtube: DEBUG
-    dev.lavalink.youtube.http.YoutubeOauth2Handler: INFO
-    
-  request:
-    enabled: true
-    includeClientInfo: true
-    includeHeaders: false
-    includeQueryString: true
-    includePayload: true
+    lavalink: INFO
